--- a/Lab2/WebContent/insertMovie.html
+++ b/Lab2/WebContent/insertMovie.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
-<title>Insert title here</title>
+<title>Add movie</title>
 </head>
 <body>
 
