--- a/Lab4/WebContent/producers.xhtml
+++ b/Lab4/WebContent/producers.xhtml
@@ -20,13 +20,13 @@
 						<f:facet name="header">
               First name
       			</f:facet>
-      			#{producer.getFirstName()}
+      			#{producer.firstName}
  					</h:column>
 					<h:column>
 						<f:facet name="header">
               	Last name
      					</f:facet>
-     					#{producer.getLastName()}
+     					#{producer.lastName}
 					</h:column>
 					<h:column>
 						<f:facet name="header">
