--- a/Lab4/WebContent/watchLists.xhtml
+++ b/Lab4/WebContent/watchLists.xhtml
@@ -20,7 +20,7 @@
 						<f:facet name="header">
               Name
       			</f:facet>
-      			#{list.getName()}
+      			#{list.name}
  					</h:column>
  					<h:column>
 						<f:facet name="header">
