--- a/Lab4/WebContent/producers.xhtml
+++ b/Lab4/WebContent/producers.xhtml
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
@@ -15,7 +14,8 @@
 		</ui:define>
 		<ui:define name="content">
 			<h:form>
-				<h:dataTable value="#{producerService.getAll()}" var="producer">
+				<h:dataTable value="#{producerService.getAll()}" var="producer"
+					styleClass="table table-bordered table-hover">
 					<h:column>
 						<f:facet name="header">
               First name
@@ -34,14 +34,17 @@
       			</f:facet>
 
 						<h:commandButton value="edit" type="submit"
-							action="#{editService.editProducer(producer)}" outcome="editProducer" />
+							action="#{editService.editProducer(producer)}"
+							styleClass="btn btn-success"/>
 						<h:commandButton value="delete"
-							action="#{producerService.delete(producer.getId())}" />
+							action="#{producerService.delete(producer.getId())}" 
+							styleClass="btn btn-danger"/>
 					</h:column>
 				</h:dataTable>
 			</h:form>
 
-			<h:button value="Add" outcome="addProducer" />
+			<h:button value="Add producer" outcome="addProducer" 
+				styleClass="btn btn-primary"/>
 		</ui:define>
 	</ui:composition>
 </h:body>
