--- a/Lab4/WebContent/addMovie.xhtml
+++ b/Lab4/WebContent/addMovie.xhtml
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+  xmlns:h="http://xmlns.jcp.org/jsf/html"
+  xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+  xmlns:f="http://xmlns.jcp.org/jsf/core"
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <head>
 <title>Add Movie</title>
 </head>
@@ -12,63 +12,65 @@
 <h:head>
 </h:head>
 <h:body>
-	<ui:composition template="./formTemplate.xhtml">
-		<ui:define name="title">Add movie</ui:define>
-		<ui:define name="header">
-			<h2>Add new movie</h2>
-		</ui:define>
-		<ui:define name="form">
-			<h:form>
-				<p>
-					<h:outputLabel value="Title" />
-					<h:inputText name="title" value="#{movie.title}" required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="Producer" />
-					<h:selectOneMenu required="true" value="#{movie.producerId}">
-						<f:selectItems value="#{producerService.getAll()}" var="p"
-							itemLabel="#{p.firstName} #{p.lastName}" itemValue="#{p.id}" />
-					</h:selectOneMenu>
-				</p>
-				<p>
-					<h:outputLabel value="year" />
-					<h:inputText name="year" value="#{movie.year}" required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="duration" />
-					<h:inputText name="duration" value="#{movie.duration}"
-						required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="description" />
-					<h:inputText name="description" value="#{movie.description}"
-						required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="imdbRating" />
-					<h:inputText name="imdbRating" value="#{movie.rating.imdbRating}"
-						required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="kinoPoinskRating" />
-					<h:inputText name="kinoPoinskRating"
-						value="#{movie.rating.kinoPoiskRating}" required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="rottenTomatosRating" />
-					<h:inputText name="rottenTomatosRating"
-						value="#{movie.rating.rottenTomatosRating}" required="true" />
-				</p>
+  <ui:composition template="./formTemplate.xhtml">
+    <ui:define name="title">Add movie</ui:define>
+    <ui:define name="header">
+      <h2>Add new movie</h2>
+    </ui:define>
+    <ui:define name="form">
+      <h:form>
+        <p>
+          <h:outputLabel value="Title" />
+          <h:inputText name="title" value="#{movie.title}"
+            required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="Producer" />
+          <h:selectOneMenu required="true" value="#{movie.producerId}">
+            <f:selectItems value="#{producerService.getAll()}" var="p"
+              itemLabel="#{p.firstName} #{p.lastName}"
+              itemValue="#{p.id}" />
+          </h:selectOneMenu>
+        </p>
+        <p>
+          <h:outputLabel value="year" />
+          <h:inputText name="year" value="#{movie.year}" required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="duration" />
+          <h:inputText name="duration" value="#{movie.duration}"
+            required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="description" />
+          <h:inputText name="description" value="#{movie.description}"
+            required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="imdbRating" />
+          <h:inputText name="imdbRating"
+            value="#{movie.rating.imdbRating}" required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="kinoPoinskRating" />
+          <h:inputText name="kinoPoinskRating"
+            value="#{movie.rating.kinoPoiskRating}" required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="rottenTomatosRating" />
+          <h:inputText name="rottenTomatosRating"
+            value="#{movie.rating.rottenTomatosRating}" required="true" />
+        </p>
 
-				<p>
-					<h:commandButton type="submit" value="Submit"
-						action="#{movieService.create(movie)}" />
-				</p>
+        <p>
+          <h:commandButton type="submit" value="Submit"
+            action="#{movieService.create(movie)}" />
+        </p>
 
 
-			</h:form>
-		</ui:define>
-	</ui:composition>
+      </h:form>
+    </ui:define>
+  </ui:composition>
 </h:body>
 
 
