--- a/Lab4/WebContent/dataViewTemplate.xhtml
+++ b/Lab4/WebContent/dataViewTemplate.xhtml
@@ -1,53 +1,56 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html">
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+  xmlns:h="http://xmlns.jcp.org/jsf/html">
 <head>
 <title><ui:insert name="title">Default title</ui:insert></title>
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 col-md-offset-4">
-				<ui:insert name="header">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <ui:insert name="header">
 
-				</ui:insert>
-			</div>
-		</div>
+        </ui:insert>
+      </div>
+    </div>
 
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<ui:insert name="content">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <ui:insert name="content">
 
 
-				</ui:insert>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<ui:insert name="navigation">
-					<h:button value="Movies" outcome="index" styleClass="btn btn-default"/>
-					<h:button value="Producers" outcome="producers" styleClass="btn btn-default"/>
-					<h:button value="WatchLists" outcome="watchLists" styleClass="btn btn-default"/>
-				</ui:insert>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<ui:insert name="footer">
+        </ui:insert>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <ui:insert name="navigation">
+          <h:button value="Movies" outcome="index"
+            styleClass="btn btn-default" />
+          <h:button value="Producers" outcome="producers"
+            styleClass="btn btn-default" />
+          <h:button value="WatchLists" outcome="watchLists"
+            styleClass="btn btn-default" />
+        </ui:insert>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ui:insert name="footer">
 
-				</ui:insert>
-			</div>
-		</div>
-	</div>
+        </ui:insert>
+      </div>
+    </div>
+  </div>
 
 
 </body>
