--- a/Lab4/WebContent/editMovie.xhtml
+++ b/Lab4/WebContent/editMovie.xhtml
@@ -1,78 +1,81 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+  xmlns:h="http://xmlns.jcp.org/jsf/html"
+  xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+  xmlns:f="http://xmlns.jcp.org/jsf/core"
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <head>
 <title>Edit Movie</title>
 </head>
 
 <body>
-	<ui:composition template="./formTemplate.xhtml">
-		<ui:define name="title">Edit movie</ui:define>
-		<ui:define name="header">
-			<h2>Edit movie</h2>
-		</ui:define>
-		<ui:define name="form">
-			<h:form>
-				<p>
-					<h:outputLabel value="Title" />
-					<h:inputText name="title" value="#{editService.movie.title}"
-						required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="Producer" />
-					<h:selectOneMenu required="true"
-						value="#{editService.movie.producerId}">
-						<f:selectItems value="#{producerService.getAll()}" var="p"
-							itemLabel="#{p.firstName}" itemValue="#{p.id}" />
-					</h:selectOneMenu>
-				</p>
-				<p>
-					<h:outputLabel value="year" />
-					<h:inputText name="year" value="#{editService.movie.year}"
-						required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="duration" />
-					<h:inputText name="duration" value="#{editService.movie.duration}"
-						required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="description" />
-					<h:inputText name="description"
-						value="#{editService.movie.description}" required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="imdbRating" />
-					<h:inputText name="imdbRating"
-						value="#{editService.movie.rating.imdbRating}" required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="kinoPoinskRating" />
-					<h:inputText name="kinoPoinskRating"
-						value="#{editService.movie.rating.kinoPoiskRating}"
-						required="true" />
-				</p>
-				<p>
-					<h:outputLabel value="rottenTomatosRating" />
-					<h:inputText name="rottenTomatosRating"
-						value="#{editService.movie.rating.rottenTomatosRating}"
-						required="true" />
-				</p>
+  <ui:composition template="./formTemplate.xhtml">
+    <ui:define name="title">Edit movie</ui:define>
+    <ui:define name="header">
+      <h2>Edit movie</h2>
+    </ui:define>
+    <ui:define name="form">
+      <h:form>
+        <p>
+          <h:outputLabel value="Title" />
+          <h:inputText name="title" value="#{editService.movie.title}"
+            required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="Producer" />
+          <h:selectOneMenu required="true"
+            value="#{editService.movie.producerId}">
+            <f:selectItems value="#{producerService.getAll()}" var="p"
+              itemLabel="#{p.firstName}" itemValue="#{p.id}" />
+          </h:selectOneMenu>
+        </p>
+        <p>
+          <h:outputLabel value="year" />
+          <h:inputText name="year" value="#{editService.movie.year}"
+            required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="duration" />
+          <h:inputText name="duration"
+            value="#{editService.movie.duration}" required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="description" />
+          <h:inputText name="description"
+            value="#{editService.movie.description}" required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="imdbRating" />
+          <h:inputText name="imdbRating"
+            value="#{editService.movie.rating.imdbRating}"
+            required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="kinoPoinskRating" />
+          <h:inputText name="kinoPoinskRating"
+            value="#{editService.movie.rating.kinoPoiskRating}"
+            required="true" />
+        </p>
+        <p>
+          <h:outputLabel value="rottenTomatosRating" />
+          <h:inputText name="rottenTomatosRating"
+            value="#{editService.movie.rating.rottenTomatosRating}"
+            required="true" />
+        </p>
 
-				<p>
-					<h:commandButton type="submit" value="Submit"
-						action="#{movieService.update(editService.movie)}" outcome="index" />
-					<h:commandButton outcome="index" value="cancel" immidiate="true" />
-				</p>
+        <p>
+          <h:commandButton type="submit" value="Submit"
+            action="#{movieService.update(editService.movie)}"
+            outcome="index" />
+          <h:commandButton outcome="index" value="cancel"
+            immidiate="true" />
+        </p>
 
 
-			</h:form>
-		</ui:define>
-	</ui:composition>
+      </h:form>
+    </ui:define>
+  </ui:composition>
 
 
 
