--- a/Lab4/WebContent/producers.xhtml
+++ b/Lab4/WebContent/producers.xhtml
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+  xmlns:h="http://xmlns.jcp.org/jsf/html"
+  xmlns:f="http://xmlns.jcp.org/jsf/core"
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
 </h:head>
 <h:body>
-	<ui:composition template="./dataViewTemplate.xhtml">
-		<ui:define name="title">Movies</ui:define>
-		<ui:define name="header">
-			<h2>Movies</h2>
-		</ui:define>
-		<ui:define name="content">
-			<h:form>
-				<h:dataTable value="#{producerService.getAll()}" var="producer"
-					styleClass="table table-bordered table-hover">
-					<h:column>
-						<f:facet name="header">
+  <ui:composition template="./dataViewTemplate.xhtml">
+    <ui:define name="title">Movies</ui:define>
+    <ui:define name="header">
+      <h2>Producers:</h2>
+    </ui:define>
+    <ui:define name="content">
+      <h:form>
+        <h:dataTable value="#{producerService.getAll()}" var="producer"
+          styleClass="table table-bordered table-hover">
+          <h:column>
+            <f:facet name="header">
               First name
       			</f:facet>
       			#{producer.firstName}
  					</h:column>
-					<h:column>
-						<f:facet name="header">
+          <h:column>
+            <f:facet name="header">
               	Last name
-     					</f:facet>
+   					</f:facet>
      					#{producer.lastName}
 					</h:column>
-					<h:column>
-						<f:facet name="header">
+          <h:column>
+            <f:facet name="header">
               buttons
       			</f:facet>
 
-						<h:commandButton value="edit" type="submit"
-							action="#{editService.editProducer(producer)}"
-							styleClass="btn btn-success"/>
-						<h:commandButton value="delete"
-							action="#{producerService.delete(producer.getId())}" 
-							styleClass="btn btn-danger"/>
-					</h:column>
-				</h:dataTable>
-			</h:form>
+            <h:commandButton value="edit" type="submit"
+              action="#{editService.editProducer(producer)}"
+              styleClass="btn btn-success" />
+            <h:commandButton value="delete"
+              action="#{producerService.delete(producer.getId())}"
+              styleClass="btn btn-danger" />
+          </h:column>
+        </h:dataTable>
+      </h:form>
 
-			<h:button value="Add producer" outcome="addProducer" 
-				styleClass="btn btn-primary"/>
-		</ui:define>
-	</ui:composition>
+      <h:button value="Add producer" outcome="addProducer"
+        styleClass="btn btn-primary" />
+    </ui:define>
+  </ui:composition>
 </h:body>
 </html>
 
