--- a/Lab4/WebContent/addMovie.xhtml
+++ b/Lab4/WebContent/addMovie.xhtml
@@ -2,7 +2,6 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:h="http://xmlns.jcp.org/jsf/html"
-  xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
   xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <head>
@@ -19,55 +18,59 @@
     </ui:define>
     <ui:define name="form">
       <h:form>
-        <p>
-          <h:outputLabel value="Title" />
+        <div class="form-group">
+          <h:outputLabel value="Title:" for="title" />
           <h:inputText name="title" value="#{movie.title}"
-            required="true" />
-        </p>
-        <p>
-          <h:outputLabel value="Producer" />
-          <h:selectOneMenu required="true" value="#{movie.producerId}">
+            required="true" styleClass="form-control" 
+            id="title"/>
+        </div>
+        <div class="form-group">
+          <h:outputLabel value="Producer:" for="producer" />
+          <h:selectOneMenu name="producer" required="true"
+            value="#{movie.producerId}" styleClass="form-control"
+            id="producer">
             <f:selectItems value="#{producerService.getAll()}" var="p"
               itemLabel="#{p.firstName} #{p.lastName}"
               itemValue="#{p.id}" />
           </h:selectOneMenu>
-        </p>
-        <p>
-          <h:outputLabel value="year" />
-          <h:inputText name="year" value="#{movie.year}" required="true" />
-        </p>
-        <p>
-          <h:outputLabel value="duration" />
+        </div>
+        <div class="form-group">
+          <h:outputLabel value="Year:" for="year" />
+          <h:inputText name="year" value="#{movie.year}" required="true"
+            styleClass="form-control" id="year"/>
+        </div>
+        <div class="form-group">
+          <h:outputLabel value="Duration:" for="duration" />
           <h:inputText name="duration" value="#{movie.duration}"
-            required="true" />
-        </p>
-        <p>
-          <h:outputLabel value="description" />
+            required="true" styleClass="form-control" id="duration"/>
+        </div>
+        <div class="form-group">
+          <h:outputLabel value="Description:" for="description" />
           <h:inputText name="description" value="#{movie.description}"
-            required="true" />
-        </p>
-        <p>
-          <h:outputLabel value="imdbRating" />
+            required="true" styleClass="form-control" id="description"/>
+        </div>
+        <div class="form-group">
+          <h:outputLabel value="imdbRating:" for="rating1" />
           <h:inputText name="imdbRating"
-            value="#{movie.rating.imdbRating}" required="true" />
-        </p>
-        <p>
-          <h:outputLabel value="kinoPoinskRating" />
+            value="#{movie.rating.imdbRating}" required="true"
+            styleClass="form-control" id="rating1"/>
+        </div>
+        <div class="form-group">
+          <h:outputLabel value="kinoPoinskRating:" for="rating2" />
           <h:inputText name="kinoPoinskRating"
-            value="#{movie.rating.kinoPoiskRating}" required="true" />
-        </p>
-        <p>
-          <h:outputLabel value="rottenTomatosRating" />
+            value="#{movie.rating.kinoPoiskRating}" required="true"
+            styleClass="form-control" id="rating2"/>
+        </div>
+        <div class="form-group">
+          <h:outputLabel value="rottenTomatosRating:"
+            for="rating3" />
           <h:inputText name="rottenTomatosRating"
-            value="#{movie.rating.rottenTomatosRating}" required="true" />
-        </p>
-
-        <p>
-          <h:commandButton type="submit" value="Submit"
-            action="#{movieService.create(movie)}" />
-        </p>
-
-
+            value="#{movie.rating.rottenTomatosRating}" required="true"
+            styleClass="form-control" id="rating3"/>
+        </div>
+        <h:commandButton type="submit" value="Submit"
+          action="#{movieService.create(movie)}"
+          styleClass="btn btn-success" />
       </h:form>
     </ui:define>
   </ui:composition>
