--- a/Lab4/WebContent/formTemplate.xhtml
+++ b/Lab4/WebContent/formTemplate.xhtml
@@ -5,35 +5,40 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html">
 <head>
 <title><ui:insert name="title">Default title</ui:insert></title>
+<link rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<script
+  src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script
+  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-  <div id="header">
-    <ui:insert name="header">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <ui:insert name="header">
 
-    </ui:insert>
-  </div>
+        </ui:insert>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <ui:insert name="form">
 
 
-  <div id="form">
-    <ui:insert name="form">
+        </ui:insert>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ui:insert name="footer">
 
-
-    </ui:insert>
-  </div>
-  <div id="navigation">
-    <ui:insert name="navigation">
-      <h:button value="Movies" outcome="index" />
-      <h:button value="Producers" outcome="producers" />
-      <h:button value="WatchLists" outcome="watchLists" />
-    </ui:insert>
-  </div>
-
-  <div id="footer">
-    <ui:insert name="footer">
-
-    </ui:insert>
+        </ui:insert>
+      </div>
+    </div>
   </div>
 
 </body>
