--- a/Lab4/WebContent/watchLists.xhtml
+++ b/Lab4/WebContent/watchLists.xhtml
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
   xmlns:h="http://xmlns.jcp.org/jsf/html"
-  xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
   xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
@@ -24,9 +23,7 @@
       			#{list.name}
  					</h:column>
           <h:column>
-            <f:facet name="header">
-              buttons
-      			</f:facet>
+            
 
             <h:commandButton value="edit" type="submit"
               action="#{editService.editWatchList(list)}"
@@ -38,7 +35,7 @@
         </h:dataTable>
       </h:form>
 
-      <h:button value="Add" outcome="addWathList"
+      <h:button value="Add" outcome="addWatchList"
         styleClass="btn btn-primary" />
     </ui:define>
   </ui:composition>
