--- a/Lab4/WebContent/formTemplate.xhtml
+++ b/Lab4/WebContent/formTemplate.xhtml
@@ -5,12 +5,9 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html">
 <head>
 <title><ui:insert name="title">Default title</ui:insert></title>
-<link rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<script
-  src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script
-  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="styles/bootstrap/bootstrap.min.css" />
+<script src="styles/jquery/jquery.min.js"></script>
+<script src="styles/bootstrap/bootstrap.min.js"></script>
 </head>
 
 <body>
