--- a/Lab4/WebContent/producers.xhtml
+++ b/Lab4/WebContent/producers.xhtml
@@ -8,7 +8,7 @@
 </h:head>
 <h:body>
   <ui:composition template="./dataViewTemplate.xhtml">
-    <ui:define name="title">Movies</ui:define>
+    <ui:define name="title">Producers</ui:define>
     <ui:define name="header">
       <h2>Producers:</h2>
     </ui:define>
