--- a/Lab4/WebContent/index.xhtml
+++ b/Lab4/WebContent/index.xhtml
@@ -2,7 +2,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
   xmlns:h="http://xmlns.jcp.org/jsf/html"
   xmlns:f="http://xmlns.jcp.org/jsf/core"
-  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+  xmlns:m="http://mytaglib/facelets">
 
 <h:head>
 </h:head>
@@ -11,6 +12,7 @@
     <ui:define name="title">Movies</ui:define>
     <ui:define name="header">
       <h2>Movies:</h2>
+      <m:myTag label1="Hello," label2=" myTag!" />
     </ui:define>
     <ui:define name="content">
       <h:form>
