--- a/Lab4/WebContent/dataViewTemplate.xhtml
+++ b/Lab4/WebContent/dataViewTemplate.xhtml
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:h="http://xmlns.jcp.org/jsf/html">
-<head>
+<h:head>
 <title><ui:insert name="title">Default title</ui:insert></title>
 <link rel="stylesheet" href="styles/bootstrap/bootstrap.min.css" />
 <script src="styles/jquery/jquery.min.js"></script>
 <script src="styles/bootstrap/bootstrap.min.js"></script>
-</head>
+</h:head>
 
 <body>
   <div class="container">
