--- a/Lab4/WebContent/index.xhtml
+++ b/Lab4/WebContent/index.xhtml
@@ -14,8 +14,16 @@
     </ui:define>
     <ui:define name="content">
       <h:form id="moviesTable">
-        <h:dataTable value="#{movieService.getAll()}" var="movie"
-          styleClass="table table-bordered table-hover" >
+        <div class="form-group">
+          <h:outputLabel value="Name filter" for="nameFilter" />
+          <h:inputText value="#{movieFilter.nameFilter}" id="nameFilter">
+            <f:ajax render="moviesTable"
+              execute="nameFilter" event="valueChange" />
+          </h:inputText>
+        </div>
+
+        <h:dataTable value="#{movieFilter.getMovies()}" var="movie"
+          styleClass="table table-bordered table-hover">
           <h:column>
             <f:facet name="header">
               Title
@@ -61,7 +69,7 @@
             <h:commandButton value="delete"
               action="#{movieService.delete(movie.getId())}"
               styleClass="btn btn-danger">
-              <f:ajax render="moviesTable"/>
+              <f:ajax render="moviesTable" />
             </h:commandButton>
           </h:column>
           <h:column>
